feature to priduct

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -188,7 +188,7 @@
 	.about-area::after {
 		display: none;
 	}
-	.feature-area:after {
+	.product-area:after {
 		display: none;
 	}
 	.image-box {
