--- a/scss/style.scss
+++ b/scss/style.scss
@@ -89,7 +89,7 @@ Table of Content:
 /*---------------------------------------------------- */
 
 /*----------------------------------------------------*/
-@import "product";
+@import "feature";
 /*---------------------------------------------------- */
 
 /*----------------------------------------------------*/
