--- a/css/style.css
+++ b/css/style.css
@@ -4350,11 +4350,11 @@ h6 {
 /*----------------------------------------------------*/
 /* Feature Area css
 ============================================================================================ */
-.product-area {
+.feature-area {
   position: relative;
 }
 
-.product-area:after {
+.feature-area:after {
   content: '';
   position: absolute;
   width: 50%;
@@ -4367,23 +4367,23 @@ h6 {
 }
 
 @media (max-width: 1199px) {
-  .product-area:after {
+  .feature-area:after {
     left: 25px;
     background-size: contain;
     width: 40%;
   }
 }
 
-.product-area .area-heading {
+.feature-area .area-heading {
   margin-bottom: 50px;
 }
 
-.product-area .single-product {
+.feature-area .single-feature {
   text-align: left;
   transition: all 300ms linear 0s;
 }
 
-.product-area .single-product .product-icon {
+.feature-area .single-feature .feature-icon {
   width: 80px;
   height: 80px;
   text-align: center;
@@ -4395,7 +4395,7 @@ h6 {
   margin-right: 40px;
 }
 
-.product-area .single-product .product-icon:after {
+.feature-area .single-feature .feature-icon:after {
   content: '';
   position: absolute;
   height: 80px;
@@ -4407,30 +4407,30 @@ h6 {
   top: 0;
 }
 
-.product-area .single-product .product-icon i {
+.feature-area .single-feature .feature-icon i {
   font-size: 40px;
   color: #1d1d1d;
 }
 
-.product-area .single-product .single-product-content h5 {
+.feature-area .single-feature .single-feature-content h5 {
   font-size: 20px;
   font-weight: 600;
   color: #fff;
   margin-bottom: 18px;
 }
 
-.product-area .single-product .single-product-content p {
+.feature-area .single-feature .single-feature-content p {
   line-height: 27px;
   font-size: 14px;
   margin-bottom: 35px;
   color: #fff;
 }
 
-.product-area .col-:nth-child(1) .single-product .product-icon:after {
+.feature-area .col-:nth-child(1) .single-feature .feature-icon:after {
   background: #fca6a6;
 }
 
-.product-area .col-:nth-child(2) .single-product .product-icon:after {
+.feature-area .col-:nth-child(2) .single-feature .feature-icon:after {
   background: #71beb4;
 }
 
@@ -4467,7 +4467,7 @@ h6 {
 
 /* End Brands  Area css
 ============================================================================================ */
-/* Products  Area css
+/* Features  Area css
 ============================================================================================ */
 .faq_area .card {
   border: none;
@@ -4539,7 +4539,7 @@ h6 {
   top: 19px;
 }
 
-/* End Products  Area css
+/* End Features  Area css
 ============================================================================================ */
 /*---------------------------------------------------- */
 /*----------------------------------------------------*/
